syntax = "proto3";

option go_package = "/pb";

import "google/protobuf/empty.proto";

service OrderService {
  //新建订单
  rpc CreateOrder(OrderItemReq) returns (OrderItemRes) ;
  //订单列表
  rpc OrderList (OrderPagingReq) returns (OrderListRes);
  //订单详情
  rpc OrderDetail(OrderItemReq) returns (OrderItemDetailRes);
  //更改状态
  rpc ChangOrderStatus (OrderStatus) returns (google.protobuf.Empty);
}

message OrderStatus {
  int32 id = 1 ;
  string OrderNo = 2;
  string status = 3;
}

message OrderItemDetailRes {
  OrderItemRes order = 1;
  repeated OrderProductRes productList = 2;
}

message OrderProductRes {
  int32 id = 1 ;
  int32 orderId = 2;
  int32 productId = 3;
  int32 num = 4;
  string productName = 5 ;
  float realPrice = 6;
  string coverImage = 7;
}

message OrderPagingReq {
  int32 accountId = 1;
  int32 pagNo = 2;
  int32 pageSize = 3;
}

message OrderListRes {
  int32 total = 1;
  repeated OrderItemRes itemList = 2;
}


message OrderItemReq {
  int32 id = 1;
  int32 accountId = 2;
  string addr = 3;
  string postCode = 4;
  string receiver = 5;
  string mobile = 6;

}

message OrderItemRes {
  int32 id = 1;
  int32 accountId = 2;
  string payType = 3;
  string orderNo = 4;
  string postCode = 5;
  string amount = 6;
  string addr = 7;
  string receiver = 8;
  string mobile = 9;
  string status = 10;
  string createTime = 11;
}